First_Step/data/45/255/compilation.txt
Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
    ^
Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
           ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                 ^
Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                     ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                      ^
Executable.java:35: error: '.class' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                   ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                    ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                              ^
Executable.java:39: error: reached end of file while parsing
}
 ^
9 errors
./Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
    ^
./Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
           ^
./Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                 ^
./Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                     ^
./Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                      ^
./Executable.java:35: error: '.class' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                   ^
./Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                    ^
./Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                              ^
./Executable.java:39: error: reached end of file while parsing
}
 ^
Vpl_tests.java:35: error: cannot find symbol
        int[] t1 = Executable.testRandomMyBubbleSort(10000, 0);
                             ^
  symbol:   method testRandomMyBubbleSort(int,int)
  location: class Executable
Vpl_tests.java:49: error: cannot find symbol
        int[] t1 = Executable.testRandomMyBubbleSort(100, 5630);
                             ^
  symbol:   method testRandomMyBubbleSort(int,int)
  location: class Executable
Vpl_tests.java:50: error: cannot find symbol
        int[] t2 = Executable.testRandomMyBubbleSort(100, 5630);
                             ^
  symbol:   method testRandomMyBubbleSort(int,int)
  location: class Executable
Vpl_tests.java:58: error: cannot find symbol
        int[] t1 = Executable.testRandomMyBubbleSort(20, s1);
                             ^
  symbol:   method testRandomMyBubbleSort(int,int)
  location: class Executable
Vpl_tests.java:59: error: cannot find symbol
        int[] t2 = Executable.testRandomMyBubbleSort(20, s2);
                             ^
  symbol:   method testRandomMyBubbleSort(int,int)
  location: class Executable
Vpl_tests.java:60: error: cannot find symbol
        int[] t3 = Executable.testRandomMyBubbleSort(20, s3);
                             ^
  symbol:   method testRandomMyBubbleSort(int,int)
  location: class Executable
./Executable.java:35: error: unexpected type
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                               ^
  required: value
  found:    class
16 errors
